ADD：用户修改自己的密码

--- a/views/admin_header.ejs
+++ b/views/admin_header.ejs
@@ -5,10 +5,14 @@
     </ul>
     <ul class="layui-nav layui-layout-right">
         <li class="layui-nav-item">
-            <a href="/">CharlesFeng</a>
+            <a href="/users" id="cur_user">charles</a>
             <dl class="layui-nav-child">
-                <dd><a href="javascript:;">修改密码</a></dd>
-                <dd><a href="javascript:;">退出登录</a></dd>
+                <dd>
+                    <div id="modify_pwd" class="ext_item">修改密码</div>
+                </dd>
+                <dd>
+                    <div id="exit" class="ext_item">退出登录</div>
+                </dd>
             </dl>
         </li>
     </ul>
