--- a/views/admin_index.ejs
+++ b/views/admin_index.ejs
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="/stylesheets/notebooks.css">
     <link rel="stylesheet" href="/stylesheets/note.css">
     <link rel="stylesheet" href="/stylesheets/table.css">
+    <link rel="stylesheet" href="/stylesheets/header.css">
     <style>
         body {
             margin: 7px;
@@ -73,6 +74,7 @@
 
 <script src="/layui/layui.js"></script>
 <script src="/javascripts/table_interaction.js"></script>
+<script src="/javascripts/header_interaction.js"></script>
 <script>
   layui.use('element', function () {
     var element = layui.element;
