--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="/layui/css/layui.css">
     <link rel="stylesheet" href="/stylesheets/notebooks.css">
     <link rel="stylesheet" href="/stylesheets/note.css">
+    <link rel="stylesheet" href="/stylesheets/header.css">
     <style>
         body {
             margin: 7px;
@@ -35,6 +36,7 @@
 
 <script src="/layui/layui.js"></script>
 <script src="/javascripts/note_interaction.js"></script>
+<script src="/javascripts/header_interaction.js"></script>
 <script>
   layui.use('element', function () {
     var element = layui.element;
