--- a/views/header.ejs
+++ b/views/header.ejs
@@ -9,10 +9,14 @@
     </ul>
     <ul class="layui-nav layui-layout-right">
         <li class="layui-nav-item">
-            <a id="cur_user" href="javascript:;">CharlesFeng</a>
+            <a id="cur_user" href="javascript:;">charles</a>
             <dl class="layui-nav-child">
-                <dd><a href="javascript:;">修改密码</a></dd>
-                <dd><a href="javascript:;">退出登录</a></dd>
+                <dd>
+                    <div id="modify_pwd" class="ext_item">修改密码</div>
+                </dd>
+                <dd>
+                    <div id="exit" class="ext_item">退出登录</div>
+                </dd>
             </dl>
         </li>
     </ul>
