--- a/views/header.ejs
+++ b/views/header.ejs
@@ -1,7 +1,7 @@
 <div class="layui-header">
     <div class="layui-logo"><img src="/images/logo.png" class="layui-nav-img"></div>
     <ul class="layui-nav layui-layout-left">
-        <li class="layui-nav-item"><a href="/">新建笔记</a></li>
+        <li class="layui-nav-item"><a href="/index">新建笔记</a></li>
         <li class="layui-nav-item"><a href="/notes">笔记</a></li>
         <li class="layui-nav-item"><a href="/notebooks">笔记本</a></li>
         <li class="layui-nav-item"><a href="/">标签</a></li>
