ADD：用户登录注册

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -23,7 +23,7 @@
                 <div class="layui-col-xs12" style="margin-left: 10px;margin-top: 10px;">
                     <label class="layui-col-xs3" style="text-align:center;font-size: 18px;color: #BDC0BA">用户编号</label>
                     <div class=" layui-col-xs7 note_title_outer" style="margin-top: -4px;">
-                        <input id="new_nb_name" type="text" maxlength="15" class=" new_nb_item_word"
+                        <input id="input_id" type="text" maxlength="15" class=" new_nb_item_word"
                                placeholder="（最长15个字）" style="font-size: 18px">
                     </div>
                 </div>
@@ -31,7 +31,7 @@
                 <div class="layui-col-xs12" style="margin-left: 10px;">
                     <label class="layui-col-xs3" style="text-align:center;font-size: 18px;color: #BDC0BA">密码</label>
                     <div class=" layui-col-xs7 note_title_outer" style="margin-top: -4px;">
-                        <input id="new_nb_content" type="password" maxlength="20" class=" new_nb_item_word"
+                        <input id="input_pwd" type="password" maxlength="20" class=" new_nb_item_word"
                                placeholder="（最长20个字）" style="font-size: 18px">
                     </div>
                 </div>
@@ -39,7 +39,7 @@
 
                 <!-- 登录注册按钮 -->
                 <div class="layui-col-xs12" style="margin-left: 10px;">
-                    <button class="layui-col-xs-offset4 log_in layui-btn layui-btn-md">
+                    <button class="log_in layui-col-xs-offset4 layui-btn layui-btn-md">
                         <!--<i class="layui-icon">&#xe641;</i>-->
                         <p>登录</p>
                     </button>
