ADD：用户访问权限控制（使用session）

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -63,7 +63,7 @@
 <script src="/javascripts/home_interaction.js"></script>
 
 <script>
-  layui.use(element, function () {
+  layui.use('element', function () {
     var element = layui.element;
   });
 
