--- a/views/admin_header.ejs
+++ b/views/admin_header.ejs
@@ -1,11 +1,11 @@
 <div class="layui-header">
     <div class="layui-logo"><img src="/images/logo.png" class="layui-nav-img"></div>
     <ul class="layui-nav layui-layout-left">
-        <li class="layui-nav-item"><a href="/">查看用户</a></li>
+        <li class="layui-nav-item"><a href="/admin">查看用户</a></li>
     </ul>
     <ul class="layui-nav layui-layout-right">
         <li class="layui-nav-item">
-            <a href="/users" id="cur_user">charles</a>
+            <a href="/admin" id="cur_user"><%= cur_user %></a>
             <dl class="layui-nav-child">
                 <dd>
                     <div id="modify_pwd" class="ext_item">修改密码</div>
