--- a/views/header.ejs
+++ b/views/header.ejs
@@ -9,7 +9,7 @@
     </ul>
     <ul class="layui-nav layui-layout-right">
         <li class="layui-nav-item">
-            <a id="cur_user" href="javascript:;">charles</a>
+            <a id="cur_user" href="#"><%= cur_user %></a>
             <dl class="layui-nav-child">
                 <dd>
                     <div id="modify_pwd" class="ext_item">修改密码</div>
