MODIFY：上传图片的bug（EJS不转义，让summer_note去转义）

--- a/views/note_area.ejs
+++ b/views/note_area.ejs
@@ -79,7 +79,7 @@
     <div class="note_div">
         <div class="summernote mynote" style="z-index: 1000; color: #BDC0BA">
             <% if(has_note === true) { %>
-            <%= note_data[0].content %>
+            <%- note_data[0].content %>
             <% } %>
         </div>
     </div>
