--- a/views/notes.ejs
+++ b/views/notes.ejs
@@ -63,7 +63,7 @@
                     </div>
                     <hr class="layui-bg-green brief_separator">
                     <div class="brief_note_content">
-                        <%= now_note.content %>
+                        <%- now_note.content %>
                     </div>
                 </div>
                 <% } %>
