--- a/views/tags.ejs
+++ b/views/tags.ejs
@@ -1,231 +1,85 @@
-<!-- 标签 -->
+<!-- 标签主界面 -->
 <!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <title>Marvel Note</title>
-    <link rel="stylesheet" href="/layui/css/layui.css?t=1512448059660" media="all">
+    <link rel="stylesheet" href="/layui/css/layui.css">
+    <link rel="stylesheet" href="/stylesheets/notebooks.css">
+    <link rel="stylesheet" href="/stylesheets/note.css">
+    <link rel="stylesheet" href="/stylesheets/table.css">
+    <link rel="stylesheet" href="/stylesheets/header.css">
     <style>
         body {
-            margin: 10px;
-        }
-
-        .demo-carousel {
-            height: 200px;
-            line-height: 200px;
-            text-align: center;
+            margin: 7px;
         }
     </style>
 </head>
-<body>
-<header>
-    <ul class="layui-nav">
-        <li class="layui-nav-item">
-            <a href="/"><img src="/images/logo.png" class="layui-nav-img">账户</a>
-            <dl class="layui-nav-child">
-                <dd><a href="javascript:;">修改密码</a></dd>
-                <dd><a href="javascript:;">退出登录</a></dd>
-            </dl>
-        </li>
-        <li class="layui-nav-item"><a href="">新建笔记</a></li>
-        <li class="layui-nav-item"><a href="">笔记</a></li>
-        <li class="layui-nav-item"><a href="">笔记本</a></li>
-        <li class="layui-nav-item"><a href="">标签</a></li>
-        <li class="layui-nav-item"><a href="">朋友圈</a></li>
-    </ul>
-</header>
-<br>
-<br>
-<br>
-<blockquote class="layui-elem-quote layui-quote-nm">
-    小圆点：
-    <span class="layui-badge-dot"></span>
-    <span class="layui-badge-dot layui-bg-orange"></span>
-    <span class="layui-badge-dot layui-bg-green"></span>
-    <span class="layui-badge-dot layui-bg-cyan"></span>
-    <span class="layui-badge-dot layui-bg-blue"></span>
-    <span class="layui-badge-dot layui-bg-black"></span>
-    <span class="layui-badge-dot layui-bg-gray"></span>
+<body class="layui-layout-body">
+<div class="layui-layout layui-layout-admin">
+    <% include ./header.ejs %>
 
-    <br><br>常规弧形徽章：
-    <span class="layui-badge">6</span>
-    <span class="layui-badge">99</span>
-    <span class="layui-badge">61728</span>
-    <span class="layui-badge">赤</span>
-    <span class="layui-badge layui-bg-orange">橙</span>
-    <span class="layui-badge layui-bg-green">绿</span>
-    <span class="layui-badge layui-bg-cyan">青</span>
-    <span class="layui-badge layui-bg-blue">蓝</span>
-    <span class="layui-badge layui-bg-black">黑</span>
-    <span class="layui-badge layui-bg-gray">灰</span>
+    <div class="layui-side layui-bg-black" style="width: 99%;margin: 15px 7px 7px;top: 53px;">
+        <div class="table_area ayui-side-scroll">
+            <!-- 表头 -->
+            <div class="layui-col-xs12">
+                <p class="layui-col-xs6 table_title">标签</p>
+                <p class="layui-col-xs6 table_title">操作</p>
+            </div>
 
-    <br><br>边框徽章：
-    <span class="layui-badge-rim">6</span>
-    <span class="layui-badge-rim">Hot</span>
-</blockquote>
+            <hr class="layui-bg-gray table_header_items_separator">
 
-<script type="text/html" id="barDemo">
-    <a class="layui-btn layui-btn-primary layui-btn-xs" lay-event="detail">查看</a>
-    <a class="layui-btn layui-btn-xs" lay-event="edit">编辑</a>
-    <a class="layui-btn layui-btn-danger layui-btn-xs" lay-event="del">删除</a>
-</script>
+            <!-- 用户列表 -->
+            <% for (var i = 0; i < tag_data.length; i++) { %>
+            <% if (i != 0) { %>
+            <hr class="layui-bg-gray table_item_separator">
+            <% } %>
+            <div class="layui-col-xs12 table_line">
+                <div class="user_id layui-col-xs6 table_item"><%= tag_data[i] %></div>
 
-<div class="layui-tab layui-tab-brief" lay-filter="demo">
-    <ul class="layui-tab-title">
-        <li class="layui-this">演示说明</li>
-        <li>日期</li>
-        <li>分页</li>
-        <li>上传</li>
-    </ul>
-    <div class="layui-tab-content">
-        <div class="layui-tab-item layui-show">
-
-            <div class="layui-carousel" id="test1">
-                <div carousel-item>
-                    <div><p class="layui-bg-green demo-carousel">在这里，你将以最直观的形式体验 layui！</p></div>
-                    <div><p class="layui-bg-red demo-carousel">在编辑器中可以执行 layui 相关的一切代码</p></div>
-                    <div><p class="layui-bg-blue demo-carousel">你也可以点击左侧导航针对性地试验我们提供的示例</p></div>
-                    <div><p class="layui-bg-orange demo-carousel">如果最左侧的导航的高度超出了你的屏幕</p></div>
-                    <div><p class="layui-bg-cyan demo-carousel">你可以将鼠标移入导航区域，然后滑动鼠标滚轮即可</p></div>
+                <!-- 查看、删除按钮 -->
+                <div class="layui-col-xs6">
+                    <div class="layui-col-xs4">
+                        <div class="table_item table_item_op_btn_tip" style="float: right">查看</div>
+                    </div>
+                    <div class="layui-btn-group layui-col-xs4 table_item_op_btn">
+                        <div class="layui-col-xs12" style="text-align: center">
+                            <button class="user_edit layui-btn layui-btn-sm">
+                                <i class="layui-icon">&#xe857;</i>
+                            </button>
+                            <button class="user_delete layui-btn layui-btn-sm layui-btn-danger">
+                                <i class="layui-icon">&#xe640;</i>
+                            </button>
+                        </div>
+                    </div>
+                    <div class="layui-col-xs4">
+                        <div class="table_item table_item_op_btn_tip" style="float: left">删除</div>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="layui-tab-item">
-            <div id="laydateDemo"></div>
-        </div>
-        <div class="layui-tab-item">
-            <div id="pageDemo"></div>
-        </div>
-        <div class="layui-tab-item">
-            <div class="layui-upload-drag" id="uploadDemo">
-                <i class="layui-icon"></i>
-                <p>点击上传，或将文件拖拽到此处</p>
-            </div>
+            <% } %>
         </div>
     </div>
 </div>
 
-<blockquote class="layui-elem-quote layui-quote-nm" id="footer">layui {{ layui.v }} 提供强力驱动</blockquote>
+<!-- include libraries(jQuery, bootstrap, fontawesome) -->
+<link href="/stylesheets/bootstrap.css" rel="stylesheet">
+<link href="/stylesheets/font-awesome.min.css" rel="stylesheet">
+<script src="/javascripts/jquery-3.2.1.min.js"></script>
+<script src="/javascripts/bootstrap.js"></script>
 
-
-<script src="/layui/layui.js?t=1512448059660"></script>
+<script src="/layui/layui.js"></script>
+<script src="/javascripts/table_interaction.js"></script>
+<script src="/javascripts/header_interaction.js"></script>
 <script>
-  layui.config({
-    version: '1512448059660' //为了更新 js 缓存，可忽略
+  layui.use('element', function () {
+    var element = layui.element;
   });
 
-  layui.use(['laydate', 'laypage', 'layer', 'table', 'carousel', 'upload', 'element'], function () {
-    var laydate = layui.laydate //日期
-      , laypage = layui.laypage //分页
-    layer = layui.layer //弹层
-      , table = layui.table //表格
-      , carousel = layui.carousel //轮播
-      , upload = layui.upload //上传
-      , element = layui.element; //元素操作
 
-    //向世界问个好
-    layer.msg('Hello World');
-
-    //监听Tab切换
-    element.on('tab(demo)', function (data) {
-      layer.msg('切换了：' + this.innerHTML);
-      console.log(data);
-    });
-
-    //执行一个 table 实例
-    table.render({
-      elem: '#test'
-      , height: 332
-      , url: '/demo/table/user/' //数据接口
-      , page: true //开启分页
-      , cols: [[ //表头
-        {field: 'id', title: 'ID', width: 80, sort: true, fixed: 'left'}
-        , {field: 'username', title: '用户名', width: 80}
-        , {field: 'sex', title: '性别', width: 80, sort: true}
-        , {field: 'city', title: '城市', width: 80}
-        , {field: 'sign', title: '签名', width: 170}
-        , {field: 'experience', title: '积分', width: 80, sort: true}
-        , {field: 'score', title: '评分', width: 80, sort: true}
-        , {field: 'classify', title: '职业', width: 80}
-        , {field: 'wealth', title: '财富', width: 135, sort: true}
-        , {fixed: 'right', width: 165, align: 'center', toolbar: '#barDemo'}
-      ]]
-    });
-
-    //监听工具条
-    table.on('tool(demo)', function (obj) { //注：tool是工具条事件名，test是table原始容器的属性 lay-filter="对应的值"
-      var data = obj.data //获得当前行数据
-        , layEvent = obj.event; //获得 lay-event 对应的值
-      if (layEvent === 'detail') {
-        layer.msg('查看操作');
-      } else if (layEvent === 'del') {
-        layer.confirm('真的删除行么', function (index) {
-          obj.del(); //删除对应行（tr）的DOM结构
-          layer.close(index);
-          //向服务端发送删除指令
-        });
-      } else if (layEvent === 'edit') {
-        layer.msg('编辑操作');
-      }
-    });
-
-    //执行一个轮播实例
-    carousel.render({
-      elem: '#test1'
-      , width: '100%' //设置容器宽度
-      , height: 200
-      , arrow: 'none' //不显示箭头
-      , anim: 'fade' //切换动画方式
-    });
-
-    //将日期直接嵌套在指定容器中
-    var dateIns = laydate.render({
-      elem: '#laydateDemo'
-      , position: 'static'
-      , calendar: true //是否开启公历重要节日
-      , mark: { //标记重要日子
-        '0-10-14': '生日'
-        , '2017-11-11': '剁手'
-        , '2017-11-30': ''
-      }
-      , done: function (value, date, endDate) {
-        if (date.year == 2017 && date.month == 11 && date.date == 30) {
-          dateIns.hint('一不小心就月底了呢');
-        }
-      }
-      , change: function (value, date, endDate) {
-        layer.msg(value)
-      }
-    });
-
-    //分页
-    laypage.render({
-      elem: 'pageDemo' //分页容器的id
-      , count: 100 //总页数
-      , skin: '#1E9FFF' //自定义选中色值
-      //,skip: true //开启跳页
-      , jump: function (obj, first) {
-        if (!first) {
-          layer.msg('第' + obj.curr + '页');
-        }
-      }
-    });
-
-    //上传
-    upload.render({
-      elem: '#uploadDemo'
-      , url: '' //上传接口
-      , done: function (res) {
-        console.log(res)
-      }
-    });
-
-    //底部信息
-    var footerTpl = lay('#footer')[0].innerHTML;
-    lay('#footer')[0].innerHTML = layui.laytpl(footerTpl).render({});
-  });
 </script>
 </body>
+
+<% include ./footer.ejs %>
 </html>
